# Cascade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.es.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  TODO.md  cliff.toml  pyproject.toml
.cascade/: events.jsonl  graph.json
.claude/agents/: cascade-worker.md
.claude/skills/cascade/: LICENSE.txt  SKILL.md  concepts.md  context.md  error-handling.md  examples.md
.claude/skills/cascade/commands/: finish-task.md  get-task.md  history.md  list-nodes.md
.claude/skills/cascade/references/: add-node.md  add-nodes.md  check-task.md  check-timeouts.md  concepts.md  edit-node.md  finish-task.md  get-task.md  history.md  inspect.md  list-nodes.md  refine-node.md  remove-node.md  rework.md  split-node.md  watch.md
.claude/skills/contribute/: SKILL.md
.claude/skills/testing/: LICENSE.txt  SKILL.md
.claude/skills/testing/references/: design.md  types.md
.github/workflows/: ci.yml  publish.yml  release.yml
.opencode/skills/cascade/: SKILL.md
docs/: architecture.md  guide.md  usage.md
docs/i18n/: README.es.md  README.ja.md  README.zh-CN.md
examples/algo-lib/: TASK.md
examples/task-tracker/: TASK.md
src/cascade/: __init__.py  cli.py  client.py  errors.py  events.py  replay.py  tips.py  types.py  view.py  viz.py
src/cascade/client/: __init__.py  base.py  execution.py  feedback.py  query.py  structure.py
src/cascade/context/: __init__.py  cancellation.py  context.py  propagator.py
src/cascade/core/: __init__.py  cascade.py  node.py  state.py
src/cascade/operations/: __init__.py  add.py  base.py  refine.py  remove.py  rework.py  split.py
src/cascade/protocols/: __init__.py  context_protocol.py  node_protocol.py
src/cascade/storage/: __init__.py  _serde.py  content.py  file_storage.py  graph_storage.py  op_log.py  protocol.py  redis_storage.py  token_store.py
src/tools/: __init__.py  add_node.py  check_task.py  check_timeouts.py  edit_node.py  finish_task.py  get_task.py  history.py  list_nodes.py  refine_node.py  remove_node.py  rework.py  split_node.py
tests/: __init__.py  conftest.py  test_context_flow.py  test_dynamic_editing.py  test_events.py  test_rework.py  test_scheduling.py  test_tools.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_context_flow.py  test_dynamic_editing.py  test_events.py  test_rework.py  test_scheduling.py  test_tools.py
tests/unit/: __init__.py  test_cancellation.py  test_chaos.py  test_client.py  test_client_coverage.py  test_client_remaining.py  test_content_store.py  test_context.py  test_events_unit.py  test_file_storage.py  test_file_storage_chaos.py  test_graph.py  test_node.py  test_operations.py  test_operations_property.py  test_properties.py  test_redis_storage.py  test_replay.py  test_storage.py  test_temporal.py  test_tokens.py  test_tools_unit.py  test_view.py  test_view_unit.py  test_watch.py
